--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
     color: red;
-    background-color: green;
     text-align: center;
+    background-image: url("https://wallpapercave.com/dwp2x/8sKMNhS.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-attachment: fixed;
 }
 
 footer {
